Refactors, bugs, style and ServiceException handling